Updating z-index of the drop zone

--- a/arc-request-workspace.html
+++ b/arc-request-workspace.html
@@ -169,6 +169,7 @@
       @apply --layout-fit;
       @apply --layout-vertical;
       @apply --layout-center;
+      z-index: 100;
       background-color: #fff;
       border: 4px var(--drop-file-importer-header-background-color, var(--primary-color)) solid;
     }
